# aws_playground

./: .gitignore  AWS Certified Solutions Architect.md  blogposts.md
all_in_one_docker/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  user_data.sh  variables.tf
basic_setting/: README.md  main.tf
graph_rag_chatbot/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
graph_rag_chatbot/backend/: Dockerfile  README.md  pyproject.toml
graph_rag_chatbot/backend/src/backend/: __init__.py  auth.py  config.py  conversation_history.py  main.py  rate_limiter.py  routes.py
graph_rag_chatbot/database/: Dockerfile  pyproject.toml
graph_rag_chatbot/database/scripts/: load_graph.py  ontology.py
graph_rag_chatbot/database/src/database/: config.py  dependencies.py  main.py  routes.py
graph_rag_chatbot/database/src/database/cypher_agent/: agent_langchain.py  prompts.py
graph_rag_chatbot/docker/: base.Dockerfile
graph_rag_chatbot/frontend/: Dockerfile  pyproject.toml
graph_rag_chatbot/frontend/src/frontend/: config.py  main.py
graph_rag_chatbot/interfaces/: pyproject.toml
graph_rag_chatbot/interfaces/src/interfaces/: endpoints.py  models.py
