[project]
name = "graph-rag-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
priority = "primary"

[tool.uv.workspace]
members = [
    "interfaces",
    "frontend",
    "backend",
    "database",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

