[project]
name = "database"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "interfaces",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=1.2.0",
    "neo4j>=5.0.3",
    "langchain-memgraph>=0.1.12",
    "langchain-experimental>=0.4.1",
    "langchain-neo4j>=0.6.0",
]

[tool.uv.sources]
interfaces = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "langchain-openai>=1.1.6",
    "openai>=2.14.0",
    "pip-system-certs>=5.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/database"]
