[project]
name = "interfaces"
version = "0.1.0"
requires-python = ">=3.11"
description = "Potential sharable package"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interfaces"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""